# awakened-cli-trade

./: Cargo.toml  README.md
src/: main.rs
src/data/: currency.rs  item.rs  mod.rs  price.rs
src/io/: mod.rs
src/io/clipboard/: event.rs  mod.rs  monitor.rs  system_monitor.rs
src/io/prices/: checker.rs  mod.rs
src/io/prices/checkers/: mod.rs  poeprices.rs
src/io/prices/payloads/: poeprices.rs
