[package]
name = "awakened-cli-trade"
version = "0.1.0"
edition = "2021"

[dependencies]
clipboard = "0.5.0"
wl-clipboard-rs = "0.7.0"
base64 = "0.20.0"
async-trait = "0.1.59"
reqwest = { version = "0.11.13", features = ["json"] }
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.150", features = ["derive"] }
notify-rust = "4.6.0"
